--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "description": "",
   "devDependencies": {
     "@playwright/test": "^1.44.1",
-    "@types/node": "^20.14.2"
+    "@types/node": "^20.14.2",
+    "cypress": "^13.13.0"
   },
   "dependencies": {
     "typescript": "^5.4.5"
